2007-07-15  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/skin/compzilla.css: change the picker
	background a tiny bit (darker), and make the selection rectangle a
	little lighter.  Also, always set the 2 pixel border on
	pickerItems, just have it be transparent in the non-selected case.
	We lose the small popping difference in size (which is sort of a
	pleasing animation) when an item is selected, but it makes things
	faster than changing the border widths of items as we animate.

2007-07-15  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/scale.js: remove the old callback_count
	stuff.  also do more precomputation outside of the animation tick
	callback, and make the animations a little longer (from 250ms to
	400ms).  try to keep mouse events from propagating to the scaled
	windows (which is admitted pretty cool, since the're properly
	transformed and everything), but it doesn't work.

	* compzilla/chrome/skin/compzilla.css: make the backgrounds in
	expose and picker less opaque.  darkening the screen so much
	instantly is very jarring.  use a more subtle darkening.

	also, put a thicker border around the picker, the same color as
	the background of the window.  with the canvas gradient, it
	provides a nice look.

2007-07-15  Chris Toshok  <toshok@ximian.com>

	* compzilla/Makefile.am (content_DATA): add nihanim.js

	* compzilla/chrome/skin/compzilla.css: new style foo.

	* compzilla/chrome/content/start.xul: use the layer background
	hack for expose, since we'll need to change the opacity of the
	selected window to 1.0 when it's highlighted. also load
	nihanim.js.

	* compzilla/chrome/content/scale.js: rework this, getting rid of
	all the jquery animation calls and switching to nih.  also remove
	the multitude of animations we were using.  now everything except
	the window moving happens instantaneously.  no more fading windows
	in/out, it just slows things down.  Also, make sure we don't start